tests/lean/defInst.lean.expected.out
[4, 5, 6]
fun x y => sorryAx (?m x y) true : (x y : Foo) → ?m x y
defInst.lean:8:26-8:32: error: failed to synthesize instance
  BEq Foo
[4, 5, 6]
fun x y => x == y : Foo → Foo → Bool
[("hello", "hello")]
false
true
true
def instMMonad : Monad M :=
ReaderT.instMonadReaderT
